fix footer on mobile browsers

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,10 +1,18 @@
 #leaflet-map {
-    height: 100vh;
-    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 body {
     position: relative;
+    height: 100%;
+}
+
+html {
+    height: 100%;
 }
 
 div.overlay {
